# PgPooler

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  backends.yaml  config.xml  docker-compose.yml  logging.yaml  pgpooler.yaml  routing.yaml
docker/init-primary/: 01-create-dbs.sql  02-backend-id-postgres.sql  03-backend-id-main.sql  04-backend-id-app.sql  05-backend-id-default_test.sql
docker/init-replica/: 01-create-dbs.sql  02-create-user.sql  03-backend-id-postgres.sql  04-backend-id-reporting.sql  05-backend-id-analytics_test.sql  06-backend-id-dwh_test.sql  07-grants-reporting.sql
docs/: ANALYTICS_DB_SCHEMA.md  ANALYTICS_INTEGRATION.md  AUTH_AND_POOL.md  CONCURRENCY.md  CONFIG_FORMAT.md  CONNECTION_SEQUENCE.md  DIPLOMA_ARCHITECTURE.md  DISPATCHER_AND_WORKERS.md  EDGE_CASES_AND_ERRORS.md  POOL_SNAPSHOTS_PLAN.md
migrations/: 001_init_analytics_schema.sql  002_add_worker_id_pool_snapshots.sql
src/: main.cpp
src/analytics/: analytics_writer.cpp  analytics_writer.hpp
src/common/: log.cpp  log.hpp
src/config/: config.cpp  config.hpp  config_yaml.cpp
src/pool/: backend_connection_pool.cpp  backend_connection_pool.hpp  connection_wait_queue.cpp  connection_wait_queue.hpp
src/protocol/: README.md  error_response.cpp  error_response.hpp  message.cpp  message.hpp
src/server/: dispatcher.cpp  dispatcher.hpp  fd_send.cpp  fd_send.hpp  listener.cpp  listener.hpp  pool_snapshot_timer.cpp  pool_snapshot_timer.hpp
src/session/: client_session.cpp  client_session.hpp
tests/: run_routing_tests.sh
